src/components/_modals/CreatePost/CreatePost.module.css
/* ... */
.dropdown-value {
  padding-left: 8px;
  padding-right: 8px;
}

.background {
  position: absolute;
  top: 0;
  right: 0;
  width: 290px;
  height: 100%;
  background-color: #f8f9fa;
  z-index: 1;
  border-radius: 0 8px 8px 0;
}

.posting-as-container {
  position: relative;
  z-index: 1000;
}

.optionsContainerUnactiveClass {
  max-height: 0 !important;
}

.options-container-class {
  max-height: 250px !important;
  overflow-y: auto !important;
  z-index: 1005 !important;

  padding-top: 4px;
  padding-bottom: 4px;
}
.user-profile-img {
  border-radius: 50%;
  border: 1px solid rgb(var(--primary-50-rgb));
}

.listing-profile-img {
  border: 1px solid rgb(var(--primary-50-rgb));
  width: 74px !important;
  height: 64px;
  border-radius: 8px;
}
.videoPlayer {
  width: 100%;
  height: 410px;
}

@media screen and (max-width: 1100px) {
  .modal-wrapper {
 
    max-height: 95vh;
 
  }
  
  .create-post-modal {
    flex-direction: column;
    padding-left: 1rem;
    padding-right: 1rem;
    gap: 16px;
    overflow-y: scroll;
  }

  .image-posting-as > img {
    display: none;
  }

  .image-posting-as > aside {
    gap: 24px;
  }

  .image-posting-as > aside div label {
    background-color: white;
  }

  .image-posting-as > aside > div > section {
    width: 100%;
    /* overflow: hidden; */
  }

  .editor-container {
    width: 100% !important;
  }

  .modal-wrapper {
    /* max-width: 350px; */
    width: 100vw !important;
    border-radius: 0;
    height: 100%;
  }

  .create-post-btn {
    width: 100%;
  }
  .create-post-btn2 {
    width: 100%;
    /* height: 80%; */
  }

  .background {
    display: none;
  }

  .modal-heading::before {
    display: none !important;
  }

  .image-posting-as > aside {
    width: 100%;
    gap: 12px;
  }

  .show-metadata {
    max-height: none;
    width: 100%;
  }

  .metadata-content .metadata-url {
    max-width: calc(100vw - 9rem);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .profile-switcher-parent {
    height: 42px !important;
    padding: 8px 8px 8px 12px !important;
  }

  .full-width-all {
    max-width: unset !important;
  }

  .full-width-all > div:last-of-type {
    max-width: unset !important;
  }

  .input-select {

    display: flex !important;
    justify-content: center !important;
    align-items: stretch !important;
  }

  .input-select > header > p {
    color: var(--Grey-Darker, #6d747a) !important;
    font-family: 'poppins' !important;
    font-size: 14px !important;
    font-style: normal !important;
    font-weight: 500 !important;
    line-height: 24px !important;
    /* 171.429% */
  }
  .show-metadata {
    display: flex;
    align-items: center;
    background: var(--Purple-3, #f7f5f9);
    border-radius: 4px;
    gap: 8px;
    flex-direction: column;

    padding: 8px 12px;
  }
  .metadata-content {
    display: flex;
    /* width: 304px; */
    padding: 0;
    align-items: center;
    gap: 8px;
  }
  .metadata-content > img {
    width: 60px;
    height: 60px;
    border-radius: 8px;
    box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
  }
  .metadata-content .metadata-title {
    color: var(--Grey-Darkest, #08090a);
    font-family: Poppins;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
    line-height: 20px;
    /* 142.857% */
    max-width: inherit;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    white-space: unset;
  }

  .show-metadata .metadata-url {
    color: var(--Grey-Darkest, #08090a);
    font-family: Poppins;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    max-width: inherit;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    white-space: unset;
    margin: 0;
    padding: 0;
    width: 100%;
  }
  .create-post-modal > section {
    height: 40vh;
  }
  .img-cancel-icon {
    right: 8px;
  }
  .image-posting-as > aside > div {
    grid-column: span 2 / span 2;
  }
  .create-post-btn {
    margin-top: auto;
    position: relative;
   
  }  
  .listing-profile-img {
    display: none;
  }
}

/* .modal-heading::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 29%;
  height: 100%;
  left: 71%;
  background-color: #f8f9fa;
  border-radius: 0 8px 8px 0;
} */

